force-app/main/default/objects/Page_Section_Content__c/Page_Section_Content__c.object-meta.xml
<CustomObject>
    <label>Page Section Content</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Page Section Contents</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>