force-app/main/default/objects/Page_Section_Content__c/fields/Heading__c.field-meta.xml
<CustomField>
    <fullName>Heading__c</fullName>
    <label>Heading</label>
    <type>TextArea</type>
</CustomField>