force-app/main/default/objects/Page_Section_Content__c/fields/Icon_Size__c.field-meta.xml
<CustomField>
    <fullName>Icon_Size__c</fullName>
    <label>Icon Size</label>
    <length>255</length>
    <type>Text</type>
</CustomField>