force-app/main/default/objects/Page_Section_Content__c/fields/Persona__c.field-meta.xml
<CustomField>
    <fullName>Persona__c</fullName>
    <label>Persona</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Persona</valueSetName>
    </valueSet>
</CustomField>