force-app/main/default/objects/Page_Section_Content__c/fields/Sub_Heading__c.field-meta.xml
<CustomField>
    <fullName>Sub_Heading__c</fullName>
    <label>Sub Heading</label>
    <type>TextArea</type>
</CustomField>