force-app/main/default/objects/Page_Section_Content__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>AppPageSection__c</columns>
    <columns>IsActive__c</columns>
    <columns>Heading__c</columns>
    <columns>Button_Text__c</columns>
    <columns>Description__c</columns>
    <columns>Icon_Name__c</columns>
    <columns>Icon_Size__c</columns>
    <columns>Sub_Heading__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>